2005-06-10  Miles Bader  <miles@gnu.org>

	* calendar/calendar.el (diary, calendar-today, holiday)
	(mark-visible-calendar-date): Remove "-face" suffix from face names.
	(diary-face, calendar-today-face, holiday-face):
	New backward-compatibility aliases for renamed faces.
	(eval-after-load "facemenu", diary-entry-marker)
	(calendar-today-marker, calendar-holiday-marker, diary-face):
	Use renamed calendar faces.

	* compare-w.el (compare-windows): Remove "-face" suffix from face name.
	(compare-windows-face): New backward-compatibility alias for
	renamed face.
	(compare-windows-highlight): Use renamed compare-windows face.

	* strokes.el (strokes-char): Remove "-face" suffix from face name.
	(strokes-char-face): New backward-compatibility alias for renamed face.
	(strokes-encode-buffer): Use renamed strokes-char face.

	* pcvs-info.el (cvs-header, cvs-filename, cvs-unknown)
	(cvs-handled, cvs-need-action, cvs-marked, cvs-msg):
	Remove "-face" suffix from face names.
	(cvs-header-face, cvs-filename-face, cvs-unknown-face)
	(cvs-handled-face, cvs-need-action-face, cvs-marked-face)
	(cvs-msg-face): New backward-compatibility aliases for renamed faces.
	(cvs-fi-up-to-date-face, cvs-fi-unknown-face, cvs-fileinfo-pp): 
	Use renamed pcvs faces.
	* pcvs.el (cvs-mode-find-file): Use renamed pcvs faces.
	* pcvs-defs.el (cvs-mode-map): Likewise.
	* cvs-status.el (cvs-status-font-lock-keywords): Likewise.

	* info.el (info-title-1, info-title-2, info-title-3)
	(info-title-4): Remove "-face" suffix from and downcase face names.
	(Info-title-1-face, Info-title-2-face, Info-title-3-face)
	(Info-title-4-face):
	New backward-compatibility aliases for renamed faces.
	(Info-fontify-node): Use renamed info faces.

	* hilit-chg.el (highlight-changes, highlight-changes-delete):
	Remove "-face" suffix from face names.
	(highlight-changes-face, highlight-changes-delete-face):
	New backward-compatibility aliases for renamed faces.
	(hilit-chg-cust-fix-changes-face-list, hilit-chg-make-ov)